--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repository: tomjoht/documentation-theme-jekyll
+repository: SammyJLee/Sam-Test-Docs-3
 
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
@@ -110,8 +110,8 @@ description: "Intended as a documentation theme based on Jekyll for technical wr
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-# url: http://idratherbewriting.com
-# baseurl: /documentation-theme-jekyll
+url: http://SammyJLee.github.io
+baseurl: /Sam-Test-Docs-3
 
 
 github: [metadata]
